--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,7 +9,28 @@
 	</header>
 
 	<main>
-		instagram photos will go here
+		<div class="row">
+			<% grams.forEach(function(gram){ %>
+			<div class="instagram-pic col-sm-3">
+				<a href="<%= gram.link %>" target="_blank">
+					<img src="<%= gram.images.standard_resolution.url%>" class="img-responsive">
+				</a>
+
+				<div class="instagram-bar">
+					<div class="likes">
+						<span class="glyphicon glyphicon-heart"></span>
+						<%= gram.likes.count %>
+					</div>
+
+					<div class="comments">
+						<span class="glyphicon glyphicon-comment"></span>
+						<%= gram.likes.count %>
+					</div>
+				</div>
+			</div>
+
+		    <% }); %>
+		</div>
 	</main>
 
 	<footer>
